@@ -77,6 +77,12 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-11+26</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -104,6 +110,7 @@
                         --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
                         --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
